# cfs-postproc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  test_output.gcode  test_output_disabled.gcode  test_output_enabled.gcode  test_output_missing.gcode  test_prime_tower_disabled.gcode  test_prime_tower_enabled.gcode  test_prime_tower_missing.gcode
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
samples/: box.cfg.new  box.new.cfg  input.gcode  input_scaled_precut.gcode  k1.box.org.cfg
src/cfs_postproc/: __main__.py  cfs_postproc.py  cfs_postproc_rightclick.py
src/cfs_postproc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli_integration.py
